--- a/api/package.json
+++ b/api/package.json
@@ -9,13 +9,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "argon2": "^0.27.2"
   },
   "devDependencies": {
+    "@types/argon2": "^0.14.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
