--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build:
       context: .
       dockerfile: docker/node/Dockerfile
+    volumes:
+      - ./api:/app  # Monte le répertoire local ./api dans le conteneur
+      - /app/node_modules  # Préserve node_modules du conteneur
     ports:
       - "3000:3000"
     env_file:
