--- a/api/package.json
+++ b/api/package.json
@@ -5,17 +5,17 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/server.js",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/server.ts",
     "test": "jest"
   },
   "dependencies": {
+    "argon2": "^0.27.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.7.0",
-    "argon2": "^0.27.2"
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
@@ -30,6 +30,7 @@
     "jest": "^27.5.1",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
 }
