--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "@types/argon2": "^0.14.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^9.0.7",
@@ -29,6 +30,7 @@
     "@types/node": "^16.18.113",
     "@types/supertest": "^2.0.11",
     "jest": "^27.5.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
