--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^16.18.113",
     "@types/supertest": "^2.0.11",
     "jest": "^27.5.1",
+    "mongodb-memory-server": "^10.1.0",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
