--- a/api/package.json
+++ b/api/package.json
@@ -26,10 +26,12 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mongodb": "^4.0.6",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^16.18.113",
     "@types/supertest": "^2.0.11",
     "jest": "^27.5.1",
+    "mongodb-memory-server": "^10.1.0",
     "supertest": "^7.0.0",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.2",
