--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,9 @@
     "build": "tsc",
     "start": "npm run build && node dist/server.js",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "docs": "typedoc --out docs src",
+    "serve-docs": "http-server ./docs"
   },
   "dependencies": {
     "argon2": "^0.27.2",
@@ -30,12 +32,14 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^16.18.113",
     "@types/supertest": "^2.0.11",
+    "http-server": "^14.1.1",
     "jest": "^27.5.1",
     "mongodb-memory-server": "^10.1.0",
     "supertest": "^7.0.0",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "typedoc": "^0.26.8",
     "typescript": "^4.9.5"
   }
 }
