--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
@@ -32,6 +34,8 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^16.18.113",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "http-server": "^14.1.1",
     "jest": "^27.5.1",
     "mongodb-memory-server": "^10.1.0",
