--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - /app/node_modules  # Préserve node_modules du conteneur
     ports:
       - "3000:3000"
+      - "3001:3000"
     env_file:
       - .env
     
@@ -17,6 +18,7 @@ services:
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
       - PORT=${PORT}
+      - PORT=3000
       - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - mongodb
